--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
-numpy>=1.13.1
-scikit-learn>=0.18.1
-scipy>=0.19.0
-torch>=0.4.1
-torchtext>=0.1.1
+certifi==2018.11.29
+chardet==3.0.4
+cycler==0.10.0
+idna==2.7
+kiwisolver==1.0.1
+matplotlib==3.0.2
+nltk==3.4
+numpy==1.15.4
+pyparsing==2.3.0
+python-dateutil==2.7.5
+requests==2.20.1
+scipy==1.1.0
+singledispatch==3.4.0.3
+six==1.12.0
+torch==0.4.0
+torchtext==0.3.1
+tqdm==4.28.1
+urllib3==1.24.1
